# ns-core-library

./: CMakeLists.txt  CMakePresets.json  update_vcs_metadata.cmake
cmake/: configure_helpers.cmake  functions.cmake  ns_core_build_functions.cmake
config/: version.h.in
config/ns/core/: version.hpp.in
config/ns/core/vcs/: metadata.hpp.in
include/ns/core/: features.hxx.in  version.hxx.in
include/ns/core/stdlib/: cstddef
include/ns/core/test/: test_framework.hxx
include/ns/core/vcs/: metadata.hxx.in
src/ns/core/test/: test_framework.cpp
tests/: ns_core_version_test.cxx  simple_test.cxx  version_test.cxx
